src/Base/Sylvester.Bindings/plaidml/plaidml.h

struct plaidml_device;
typedef struct plaidml_device plaidml_device;
struct plaidml_device_enumerator;
typedef struct plaidml_device_enumerator plaidml_device_enumerator;
// Allocates a device enumerator and initializes it using automatic configuration.
//
// If the supplied callback is NULL, the call will block until the enumerator
// is fully initialized, and then will return a pointer to the enumerator
// (unless an error occurs).
//
// If the supplied callback is non-NULL, the call will immediately return NULL,
// and will arrange for the callback to be invoked with the enumerator once the
// enumerator becomes available (calling it with a NULL enumerator on error).  The
// library guarantees to invoke the callback exactly once.
//
// If the library returns an enumerator, there will be at least one
// configured device available; otherwise, the call will fail with
// VAI_STATUS_NOT_FOUND.
//
// The library may invoke the callback synchronously if the enumerator is
// immediately available or in error conditions.
PLAIDML_API plaidml_device_enumerator* plaidml_alloc_device_enumerator(
    vai_ctx* ctx, void (*callback)(void* arg, plaidml_device_enumerator* enumerator), void* arg);
// Allocates a device enumerator and initializes it using the supplied
// configuration. Otherwise identical to the version that uses system
// config.
PLAIDML_API plaidml_device_enumerator* plaidml_alloc_device_enumerator_with_config(
    vai_ctx* ctx, const char* configuration, void (*callback)(void* arg, plaidml_device_enumerator* enumerator),
    void* arg);
struct plaidml_buffer;
typedef struct plaidml_buffer plaidml_buffer;
struct plaidml_mapping;
typedef struct plaidml_mapping plaidml_mapping;
// Maps a buffer's current contents into memory.
//
// If the supplied callback is NULL, the call will block until the buffer is
// available, and then will return a pointer to a mapping for the buffer
// (unless an error occurs).
//
// If the supplied callback is non-NULL, the call will immediately return NULL,
// and will arrange for the callback to be invoked with the mapping once the
// buffer's data becomes available (calling it with a NULL mapping on error).
//
// The library may invoke the callback synchronously if the buffer's data is
// already available or in error conditions.
//
// A NULL buffer may be supplied; this will always result in a NULL address,
// and an out-of-memory error in the current thread's thread-local storage.
PLAIDML_API plaidml_mapping* plaidml_map_buffer_current(plaidml_buffer* buffer,
                                                        void (*callback)(void* arg, plaidml_mapping* mapping),
                                                        void* arg);
struct plaidml_shape;
typedef struct plaidml_shape plaidml_shape;
// A PlaidML datatype indicates the type of data stored within a buffer, as
// observed by a program.
typedef enum {
  PLAIDML_DATA_INVALID = 0,
  PLAIDML_DATA_BOOLEAN = 0x02,
  PLAIDML_DATA_INT8 = 0x10,
  PLAIDML_DATA_INT16 = 0x11,
  PLAIDML_DATA_INT32 = 0x12,
  PLAIDML_DATA_INT64 = 0x13,
  PLAIDML_DATA_UINT8 = 0x20,
  PLAIDML_DATA_UINT16 = 0x21,
  PLAIDML_DATA_UINT32 = 0x22,
  PLAIDML_DATA_UINT64 = 0x23,
  PLAIDML_DATA_FLOAT16 = 0x31,
  PLAIDML_DATA_FLOAT32 = 0x32,
  PLAIDML_DATA_FLOAT64 = 0x33,
} plaidml_datatype;
// Set the default datatype for floating-point computations.
PLAIDML_API void plaidml_set_floatx(plaidml_datatype datatype);
// Allocates a shape, or returns NULL if the library cannot allocate sufficient
// memory.  Note that shapes must have dimensions added before use.
PLAIDML_API plaidml_shape* plaidml_alloc_shape(vai_ctx* ctx, plaidml_datatype datatype);
// Frees a shape.  After this call, the shape should not be used for any
// subsequent calls.  Freeing a NULL shape is a no-op.
PLAIDML_API void plaidml_free_shape(plaidml_shape* shape);
// Sets a shape's offset, in elements, from the beginning of the data.
PLAIDML_API bool plaidml_set_shape_offset(vai_ctx* ctx, plaidml_shape* shape, uint64_t offset_in_elements);
// Adds a dimension to a shape.  Dimension sizes and strides are measured in
// elements of the shape's datatype, not by local buffer byte counts.
PLAIDML_API bool plaidml_add_dimension(vai_ctx* ctx, plaidml_shape* shape, uint64_t size_in_elements,
                                       int64_t stride_in_elements);
// Gets a shape's type.
PLAIDML_API plaidml_datatype plaidml_get_shape_type(plaidml_shape* shape);
// Gets a shape's offset.
PLAIDML_API uint64_t plaidml_get_shape_offset(plaidml_shape* shape);
// Get the number of dimensions for a shape.
PLAIDML_API size_t plaidml_get_shape_dimension_count(plaidml_shape* shape);
// Gets the size in elements for a given shape dimension.
// If the dimension is out of range, zero will be returned.
PLAIDML_API uint64_t plaidml_get_shape_dimension_size(plaidml_shape* shape, size_t dim);
// Gets the stride in elements for a given shape dimension.
// If the dimension is out of range, zero will be returned.
PLAIDML_API int64_t plaidml_get_shape_dimension_stride(plaidml_shape* shape, size_t dim);
// Gets the byte size required for a buffer to hold the given shape.
PLAIDML_API uint64_t plaidml_get_shape_buffer_size(plaidml_shape* shape);
// Gets the underlying element count described by the given shape.
PLAIDML_API uint64_t plaidml_get_shape_element_count(plaidml_shape* shape);
struct plaidml_function;
typedef struct plaidml_function plaidml_function;
// Frees a function.  After this call, the function should not be used for any
// subsequent calls.  Freeing a NULL function is a no-op.
PLAIDML_API void plaidml_free_function(plaidml_function* function);
// Return the number of inputs to a function, 0 if function is NULL
PLAIDML_API size_t plaidml_get_function_input_count(plaidml_function* function);
// Return the name of input i for a function, or NULL if function is NULL or out of bounds
PLAIDML_API const char* plaidml_get_function_input(plaidml_function* function, size_t i);
// Return the number of outpus from function, 0 if function is NULL
PLAIDML_API size_t plaidml_get_function_output_count(plaidml_function* function);
// Return the name of output i for a function, or NULL if function is NULL or out of bounds
PLAIDML_API const char* plaidml_get_function_output(plaidml_function* function, size_t i);
struct plaidml_var;
typedef struct plaidml_var plaidml_var;
// Frees a var.  After this call, the var should not be used for any
// subsequent calls.  Freeing a NULL var is a no-op.
PLAIDML_API void plaidml_free_var(plaidml_var* var);
// Allocate a placeholder var.
//
// A placeholder can be used during function application: used as the output of
// one function application and the the input of another function application,
// the placeholder defines an information flow between the functions.  A
// placeholder can also during function composition: the placeholder can be
// bound to the inputs or outputs of the composed function.
//
// num_dimensions specifies the placeholder dimension count: PlaidML functions are
// polymorphic with respect to tensor sizes and datatypes, but not to the
// actual dimension count of their inputs and outputs, so placeholders need to
// indicate the number of dimensions of the variables they will eventually be
// bound to.  For scalar placeholders, specify zero for the dimension count.
PLAIDML_API plaidml_var* plaidml_alloc_placeholder(size_t num_dimensions);
// Allocates a var representing a signed integer constant.
PLAIDML_API plaidml_var* plaidml_alloc_int64(int64_t value);
// Allocates a var representing a floating point constant.
PLAIDML_API plaidml_var* plaidml_alloc_real(double value);
// Allocates a var representing a tensor, bound to the given shape and buffer.
PLAIDML_API plaidml_var* plaidml_alloc_tensor(vai_ctx* ctx, plaidml_buffer* buffer, plaidml_shape* shape);
// Builds a function from the supplied code written in the PlaidML operation
// description language.  If 'id' is not NULL, attach the id to the function
// for tracking purposes.
PLAIDML_API plaidml_function* plaidml_build_coded_function(const char* code, const char* id);
// TODO: Make more general method to serialize things.

// Load a function (possibly with bound tensors) from a file
PLAIDML_API plaidml_function* plaidml_load_function(vai_ctx* ctx, plaidml_device* dev, const char* file);
// Store a function (possibly with bound tensors) from to a file
PLAIDML_API bool plaidml_save_function(plaidml_function* func, const char* file);
struct plaidml_applier;
typedef struct plaidml_applier plaidml_applier;
struct plaidml_composer;
typedef struct plaidml_composer plaidml_composer;
// Allocates a composer, or returns NULL if the library cannot allocate sufficient memory.
PLAIDML_API plaidml_composer* plaidml_alloc_composer();
// Binds a placeholder var to a named input of a composed function.
PLAIDML_API bool plaidml_add_composer_input(plaidml_composer* composer, const char* name, plaidml_var* var);
// Binds a computed value var to a named output of a composed function.
PLAIDML_API bool plaidml_add_composer_output(plaidml_composer* composer, const char* name, plaidml_var* var);
// Adds a dependency to the composed function.  Any updates induced by the function
// application will be updates of the newly generated function (in addition to any
// explicit updates, which will superseed them).
PLAIDML_API bool plaidml_add_composer_dependency(plaidml_composer* composer, plaidml_applier* must_run_before);
// Adds a tensor update to a composed function.  This allows the composed
// function to have externally visible side effects when run: the source tensor
// (which should be a placeholder bound to an output of some function) will be
// assigned to the destination tensor (either a placeholder or a tensor var)
// each time the composed function is run.
PLAIDML_API bool plaidml_add_composer_update(plaidml_composer* composer, plaidml_var* dest_tensor,
                                             plaidml_var* src_tensor);
// Builds the function described by the composer.  This should be called at
// most once per composer; after this call, the only valid operation on the
// composer is plaidml_free_composer().
PLAIDML_API plaidml_function* plaidml_build_composed_function(plaidml_composer* composer);
// Frees a composer.  After this call, the composer should not be used for any
// subsequent calls.  Freeing a NULL composer is a no-op.
PLAIDML_API void plaidml_free_composer(plaidml_composer* composer);
// Allocates an applier describing the application of the given function to some
// number of inputs, or returns NULL if the library cannot allocate sufficient memory.
PLAIDML_API plaidml_applier* plaidml_alloc_applier(plaidml_function* function);