Sylvester.Compiler.PlaidML/Bindings.cs


            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_set_floatx")]
            internal static extern void PlaidmlSetFloatx(global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDatatype datatype);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_alloc_shape")]
            internal static extern global::System.IntPtr PlaidmlAllocShape(global::System.IntPtr ctx, global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDatatype datatype);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_free_shape")]
            internal static extern void PlaidmlFreeShape(global::System.IntPtr shape);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_set_shape_offset")]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool PlaidmlSetShapeOffset(global::System.IntPtr ctx, global::System.IntPtr shape, ulong offset_in_elements);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_add_dimension")]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool PlaidmlAddDimension(global::System.IntPtr ctx, global::System.IntPtr shape, ulong size_in_elements, long stride_in_elements);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_get_shape_type")]
            internal static extern global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDatatype PlaidmlGetShapeType(global::System.IntPtr shape);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_get_shape_offset")]
            internal static extern ulong PlaidmlGetShapeOffset(global::System.IntPtr shape);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_get_shape_dimension_count")]
            internal static extern ulong PlaidmlGetShapeDimensionCount(global::System.IntPtr shape);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_get_shape_dimension_size")]
            internal static extern ulong PlaidmlGetShapeDimensionSize(global::System.IntPtr shape, ulong dim);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_get_shape_dimension_stride")]
            internal static extern long PlaidmlGetShapeDimensionStride(global::System.IntPtr shape, ulong dim);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_get_shape_buffer_size")]
            internal static extern ulong PlaidmlGetShapeBufferSize(global::System.IntPtr shape);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_get_shape_element_count")]
            internal static extern ulong PlaidmlGetShapeElementCount(global::System.IntPtr shape);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_free_function")]
            internal static extern void PlaidmlFreeFunction(global::System.IntPtr function);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_get_function_input_count")]
            internal static extern ulong PlaidmlGetFunctionInputCount(global::System.IntPtr function);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_get_function_input")]
            internal static extern global::System.IntPtr PlaidmlGetFunctionInput(global::System.IntPtr function, ulong i);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_get_function_output_count")]
            internal static extern ulong PlaidmlGetFunctionOutputCount(global::System.IntPtr function);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_get_function_output")]
            internal static extern global::System.IntPtr PlaidmlGetFunctionOutput(global::System.IntPtr function, ulong i);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_free_var")]
            internal static extern void PlaidmlFreeVar(global::System.IntPtr var);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_alloc_placeholder")]
            internal static extern global::System.IntPtr PlaidmlAllocPlaceholder(ulong num_dimensions);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_alloc_int64")]
            internal static extern global::System.IntPtr PlaidmlAllocInt64(long value);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_alloc_real")]
            internal static extern global::System.IntPtr PlaidmlAllocReal(double value);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_alloc_tensor")]
            internal static extern global::System.IntPtr PlaidmlAllocTensor(global::System.IntPtr ctx, global::System.IntPtr buffer, global::System.IntPtr shape);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_build_coded_function")]
            internal static extern global::System.IntPtr PlaidmlBuildCodedFunction([MarshalAs(UnmanagedType.LPStr)] string code, [MarshalAs(UnmanagedType.LPStr)] string id);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_load_function")]
            internal static extern global::System.IntPtr PlaidmlLoadFunction(global::System.IntPtr ctx, global::System.IntPtr dev, [MarshalAs(UnmanagedType.LPStr)] string file);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_save_function")]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool PlaidmlSaveFunction(global::System.IntPtr func, [MarshalAs(UnmanagedType.LPStr)] string file);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_alloc_composer")]
            internal static extern global::System.IntPtr PlaidmlAllocComposer();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_add_composer_input")]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool PlaidmlAddComposerInput(global::System.IntPtr composer, [MarshalAs(UnmanagedType.LPStr)] string name, global::System.IntPtr var);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_add_composer_output")]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool PlaidmlAddComposerOutput(global::System.IntPtr composer, [MarshalAs(UnmanagedType.LPStr)] string name, global::System.IntPtr var);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_add_composer_dependency")]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool PlaidmlAddComposerDependency(global::System.IntPtr composer, global::System.IntPtr must_run_before);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_add_composer_update")]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool PlaidmlAddComposerUpdate(global::System.IntPtr composer, global::System.IntPtr dest_tensor, global::System.IntPtr src_tensor);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_build_composed_function")]
            internal static extern global::System.IntPtr PlaidmlBuildComposedFunction(global::System.IntPtr composer);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_free_composer")]
            internal static extern void PlaidmlFreeComposer(global::System.IntPtr composer);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_alloc_applier")]
            internal static extern global::System.IntPtr PlaidmlAllocApplier(global::System.IntPtr function);
